Fixed map not showing

--- a/client/src/styles/discover.css
+++ b/client/src/styles/discover.css
@@ -26,6 +26,7 @@
 
 .intro{
   text-align: right;
+  padding-top: 1%;
 }
 
 .intro [class*="fa-sign-"] {
